<resources>
    <string name="app_name">GUMI动漫</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ic_menu_home">首页</string>

    <string name="ic_menu_update">一周更新</string>

    <string name="ic_menu_hot">热门新番</string>
    <string name="ic_menu_rank">总排行榜</string>
    <string name="ic_menu_current">最近更新</string>
    <string name="ic_menu_theme">主题选择</string>
    <string name="ic_menu_setting">设置与帮助</string>
    <string name="ic_menu_aboout">关于我</string>
    <string name="ic_menu_down">离线下载</string>


</resources>
